# klask-io

./: .env.example  .gitignore  .travis.yml  .yo-rc.json  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  DEPENDENCY_UPGRADE_REPORT.md  DEVELOPMENT.md  Dockerfile  FINAL-CI-STRATEGY.md  FINAL-NO-DOUBLE-BUILD.md  HELM-VERSIONING-STRATEGY.md  Jenkinsfile  LICENSE  Makefile  Makefile.helm  NO-DOUBLE-BUILD-STRATEGY.md  README.md  SECURITY.md  SMART-CI-STRATEGY.md  SUMMARY_GIT_TREE_TESTS.md  TAGGING-STRATEGY.md  TESTING-HELM.md  TESTING.md  TODO.txt  bower.json  debugger.renderers.xml  diff.xml  docker-compose.prod.yml  docker-compose.yml  editor.codeinsight.xml  find.xml  gulpfile.js  markdown.xml  mavenVersion.xml  mvnw  other.xml  package-lock.json  package.json  pom.xml  (+6 more)
.claude/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  WELCOME.txt
.claude/agents/: code-quality-reviewer.md  code-reviewer.md  debug-specialist.md  deployment-expert.md  react-frontend-expert.md  rust-backend-expert.md  test-specialist.md
.claude/hooks/: post-code-change.sh  pre-commit.sh
.github/workflows/: build-and-publish.yml  ci-mock.yml  ci.yml  deploy.yml  deploy.yml.disabled  release.yml
.jhipster/: File.json  Repository.json
_windows/: git.xml  path.macros.xml
charts/: README.md
charts/klask/: .github-deploy-example.yml  Chart-cnpg.yaml.example  Chart.yaml  README.md  STORAGE.md  example-custom-values.yaml  values-external-db.yaml  values-local.yaml  values.yaml
charts/klask/charts/: postgresql-15.5.38.tgz
charts/klask/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  servicemonitor.yaml
charts/klask/templates/backend/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
charts/klask/templates/common/: poddisruptionbudget.yaml  serviceaccount.yaml
charts/klask/templates/frontend/: deployment.yaml  service.yaml
charts/klask/templates/istio/: destination-rule.yaml  gateway.yaml  service-entry.yaml  virtual-service-egress.yaml  virtual-service.yaml
charts/klask/templates/postgresql/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
codestyles/: SIB Formatter.xml
docs/: CICD.md  OPTIMIZED-CI-WORKFLOW.md
git-hooks/: pre-commit
gulp/: build.js  serve.js
klask-react/: .env  .env.example  Dockerfile  Dockerfile.standalone  PERFORMANCE_OPTIMIZATIONS.md  entrypoint.sh  index.html  nginx-standalone.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
klask-react/public/: runtime-config.js
klask-react/src/: App.tsx  index.css  vite-env.d.ts
klask-react/src/contexts/: SearchFiltersContext.tsx
klask-react/src/hooks/: useAdmin.ts  useFiles.ts  useProgress.ts  useRepositories.ts  useSearch.ts  useUsers.ts
klask-react/src/lib/: api.ts  config.ts  react-query.ts  utils.tsx  validations.ts
klask-react/src/stores/: auth-store.ts  search-store.ts
klask-react/src/test/: README.md  SyntaxHighlighterTest.tsx  progress-test-utils.ts  react-query-test-utils.tsx  setup.ts  test-setup-guide.md  test-utils.tsx  utils.tsx
klask-react/src/types/: index.ts
klask-react/src/utils/: cronTimezone.ts
klask-rs/: .env  .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SCHEDULER-MIGRATION.md  TEST_SETUP.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  init-db.sql
klask-rs/.cargo/: config.toml
klask-rs/.sqlx/: query-03e6e4b2ea1331ed69003fad33b8df4cc374eee10d063d1d3c95c216c4e6f152.json  query-db53e3b1ce1e6e28a5f42df4effb7910c653e25ec665643e0f4735e2aa68fbae.json
klask-rs/examples/: test_cron.rs  test_cron_22h.rs  test_cron_tz.rs
klask-rs/migrations/: 20240911000000_add_access_token.sql  20240913095602_add_cron_scheduling.sql  20240918000000_remove_files_table.sql  20240923000000_add_last_crawl_duration.sql  20240923100000_add_gitlab_exclusion_fields.sql  20240924000000_add_crawl_resumption_fields.sql  20250910204817_initial_schema.sql  20251004000000_add_user_activity_fields.sql  20251004120000_add_github_support.sql
klask-rs/src/: config.rs  database.rs  lib.rs  main.rs  test_utils.rs
klask-rs/src/api/: admin.rs  auth.rs  files.rs  mod.rs  repositories.rs  scheduler.rs  search.rs  users.rs
klask-rs/src/auth/: claims.rs  errors.rs  extractors.rs  jwt.rs  mod.rs
klask-rs/src/models/: file.rs  mod.rs  repository.rs  user.rs
klask-rs/src/repositories/: file_repository.rs  mod.rs  repository_repository.rs  test_user_repository.rs  user_repository.rs
klask-rs/src/services/: crawler.rs  encryption.rs  file.rs  github.rs  gitlab.rs  mod.rs  progress.rs  scheduler.rs  scheduler_new_broken.rs  search.rs  seeding.rs
klask-rs/src/services/crawler/: branch_processor.rs  file_processing.rs  git_operations.rs  git_tree_walker.rs  github_crawler.rs  gitlab_crawler.rs  mod.rs  service.rs
klask-rs/tests/: GIT_TREE_IMPLEMENTATION_GUIDE.md  README_GIT_TREE_TESTS.md  admin_api_test.rs  admin_endpoints_test.rs  admin_integration_test.rs  admin_sqlite_test.rs  api_stop_crawl_test.rs  api_test.rs  auth_test.rs  crawl_api_integration_test.rs  crawl_conflict_prevention_test.rs  crawl_edge_cases_test.rs  crawl_prevention_test.rs  crawler_cancellation_test.rs  crawler_test.rs  crawler_tree_integration_test.rs  crawler_unit_test.rs  git_tree_reading_test.rs  github_api_test.rs  progress_test.rs  progress_tracker_test.rs  scheduler_test.rs  search_repository_test.rs  search_service_test.rs  seeding_service_test.rs  system_uptime_search_test.rs  task_cleanup_test.rs
scripts/: debug-security-scan.sh  enable-mock-workflow.sh  security-scan-fix.sh  test-helm.sh  test-tagging-strategy.sh  validate-workflow.sh
src/main/docker/: Dockerfile  app.yml  elasticsearch.yml  postgresql.yml  sonar.yml
src/main/resources/: .h2.server.properties  banner.txt  logback-spring.xml
src/main/webapp/: 404.html  index.html  robots.txt
src/test/javascript/: karma.conf.js
src/test/resources/: logback-test.xml
(+547 files in other folders)
