[package]
name = "klask-rs"
version = "0.1.0"
edition = "2021"
authors = ["Klask Team"]
description = "Modern Rust-based code search engine"

[dependencies]
# Web framework and async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database and ORM
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Search engine
tantivy = "0.24"

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Authentication and security
jsonwebtoken = "9.0"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Repository crawling
git2 = "0.19"

# File processing
walkdir = "2.5"
mime_guess = "2.0"

# HTTP client for API calls (using rustls instead of openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Encryption for tokens
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Scheduling and cron jobs
tokio-cron-scheduler = "0.10"
cron = "0.12"

# Cryptographic hashing for deterministic IDs
sha2 = "0.10"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"
httpmock = "0.7"
axum-test = "15.0"
